# PopSyCLE

./: .gitignore  .readthedocs.yaml  .readthedocs.yml  .rtd-environment.yml  MANIFEST.in  README.rst  contributors.md  requirements.txt  setup.cfg  setup.py  tox.ini
devel/: cone density sampler.ipynb
docs/: PopSyCLE_example.ipynb  PopSyCLE_example_multiples.ipynb  PopSyCLE_example_run.ipynb  PopSyCLE_example_slurm.ipynb  bin_edges_number.md  bin_edges_number.py  conf.py  documentation.rst  howto.rst  index.rst
docs-sphinx/: conf.py  index.rst
docs-sphinx/_build/doctrees/: environment.pickle  index.doctree
docs-sphinx/_build/html/: ._index.html  .buildinfo  genindex.html  (+5 more)
docs-sphinx/source/: changelog.rst  development.rst  popsycle_docs.rst
docs/Documentation_PopSyCLE_LaTeX/: ._main.tex  main.tex
docs/deprecated/: howto.rst
docs/popsycle/: index.rst
docs/source/: changelog.rst  development.rst  popsycle.rst  popsycle_docs.rst
licenses/: LICENSE.rst
popsycle/: Script2WriteScripts.py  Script2WriteScripts.yaml  __init__.py  add_pbh_plots.py  analysis.py  binary_utils.py  calc_events.py  conftest.py  converter.py  ebf.py  filters.py  microlensing_config.yaml  orbits.py  popsycle_config.yaml  run.py  run_on_slurm.py  slurm.py  slurm_config.yaml  slurm_launcher.py  supercomputer.py  synthetic.py  utils.py
popsycle/data/: blue_line.csv  inner_slop_half.csv  pbh_config.yaml  popsycle_config.yaml  radial_velocity_dispersion_digitized.csv  radial_velocity_profile_middle.csv  radial_velocity_profile_shallow.csv  radial_velocity_profile_steep.csv  red_line.csv  slurm_config.yaml
popsycle/example_subpkg/: setup_package.py
popsycle/tests/: output_test_synthetic.py  table_test_synthetic.py  test_analysis.py  test_h5_output.py  test_mass_match.py  test_synthetic.py  test_utils.py
(+28 files in other folders)
