[metadata]
name = popsycle
author = Casey Lam and Jessica Lu
author_email = jlu.astro@berkeley.edu
license = BSD 3-Clause
license_file = licenses/LICENSE.rst
url = https://github.com/jluastro/PopSyCLE
description = Population Synthesis for Compact-object Lensing Events
long_description = file: README.rst
long_description_content_type = text/x-rst
edit_on_github = False
github_project = jluastro/PopSyCLE

[options]
zip_safe = False
packages = find:
python_requires = >=3.6
setup_requires = setuptools_scm
install_requires =
    astropy


[options.extras_require]
test =
    pytest-astropy
docs =
    sphinx-astropy

[options.package_data]
popsycle = data/*

[tool:pytest]
testpaths = "popsycle" "docs"
astropy_header = true
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst

[coverage:run]
omit =
    popsycle/_astropy_init*
    popsycle/conftest.py
    popsycle/*setup_package*
    popsycle/tests/*
    popsycle/*/tests/*
    popsycle/extern/*
    popsycle/version*
    */popsycle/_astropy_init*
    */popsycle/conftest.py
    */popsycle/*setup_package*
    */popsycle/tests/*
    */popsycle/*/tests/*
    */popsycle/extern/*
    */popsycle/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_
